Initial version of android samples added.

--- a/com.task4java.android.examples/res/values/strings.xml
+++ b/com.task4java.android.examples/res/values/strings.xml
@@ -2,7 +2,7 @@
 <resources>
 
     <string name="app_name">task4java Android Examples</string>
-    <string name="hello_world">Hello world!</string>
     <string name="action_settings">Settings</string>
+    <string name="buttonCaption">Button</string>
 
 </resources>
